# structurizr-mcp

./: .gitignore  README.md  pyproject.toml
src/structurizr_mcp/: config.py  server.py
src/structurizr_mcp/tools/: api.py  dsl.py  export.py  validate.py
