[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "structurizr-mcp"
version = "0.1.0"
description = "MCP server for Structurizr Lite — read/write DSL, validate, export diagrams"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
structurizr-mcp = "structurizr_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/structurizr_mcp"]
